argocd/argocd.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
#  annotations:
#    cert-manager.io/cluster-issuer: "letsencrypt-prod-cloudflare-dns"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: http
      host: argocd.schinel.li
#  tls:
#    - hosts:
#        - "argocd.schinel.li"
#      secretName: argocd-tls
